<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textview_step_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_12dp"
                android:layout_marginRight="@dimen/margin_12dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_text_size"
                tools:text="@string/sample_step_count" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textview_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_12dp"
                android:layout_marginLeft="@dimen/margin_12dp"
                android:layout_marginRight="@dimen/margin_12dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:gravity="center"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/secondary_text_size"
                tools:text="@string/app_name" />

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/exo_player_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/poster_height" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/image_no_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/no_video_available"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_12dp"
                android:layout_marginRight="@dimen/margin_12dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:gravity="left"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_text_size"
                android:visibility="visible"
                android:text="@string/description" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textview_long_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_12dp"
                android:layout_marginLeft="@dimen/margin_12dp"
                android:layout_marginRight="@dimen/margin_12dp"
                android:fontFamily="sans-serif-light"
                android:gravity="left"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/primary_text_size"
                tools:text="@string/app_name" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/next" />

    </RelativeLayout>

</LinearLayout>